ДЗ11-1 бесконечный скролл

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,7 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-    <div class="btn-load-more">
-      <button type="button" class="load-more">Load more</button>
-    </div>
+    <div id="scroll-area"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
